# bazel-grpc-demo

./: README.md  WORKSPACE
protogen/: BUILD.bazel  PROTO_BUILD.bazel
protogen/apis/: .gitignore  .gitlab-ci.yml  BUF.md  README.md  buf.yaml
protogen/apis/proto/derence/internal/nlu/v1alpha6/: BUILD.bazel  nlu_macs_cid_calc_service.proto
src/proto/: greeter.proto
